Write edit proof methods
1. update/clear formula, annotation
2. insert/add
todo: delete, and adjust premises

--- a/proofs_propositional/search_ann_ex0.ipynb
+++ b/proofs_propositional/search_ann_ex0.ipynb
@@ -6,6 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# type: ignore\n",
+    "\n",
     "try:\n",
     "  import sys\n",
     "  sys.path.append('../')\n",
@@ -26,9 +28,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "'repeat' rule for line 6 failed.\n",
       "'imp intro' rule successfully applied to line 6.\n",
-      "'repeat' rule for line 5 failed.\n",
       "'imp intro' rule successfully applied to line 5.\n",
       "'repeat' rule successfully applied to line 4.\n",
       "\n",
@@ -68,25 +68,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "'repeat' rule for line 10 failed.\n",
       "'imp intro' rule successfully applied to line 10.\n",
-      "'repeat' rule for line 9 failed.\n",
       "'imp intro' rule successfully applied to line 9.\n",
-      "'repeat' rule for line 8 failed.\n",
       "'imp intro' rule successfully applied to line 8.\n",
       "'repeat' rule for line 7 failed.\n",
       "'bot elim' rule for line 7 failed.\n",
       "'not elim' rule for line 7 failed.\n",
       "'imp elim' rule successfully applied to line 7.\n",
-      "'repeat' rule for line 6 failed.\n",
       "'imp intro' rule for line 6 failed.\n",
+      "'repeat' rule for line 6 failed.\n",
       "'bot elim' rule for line 6 failed.\n",
       "'not elim' rule for line 6 failed.\n",
       "'imp elim' rule successfully applied to line 6.\n",
@@ -148,18 +145,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "'repeat' rule for line 10 failed.\n",
       "'imp intro' rule successfully applied to line 10.\n",
-      "'repeat' rule for line 9 failed.\n",
       "'imp intro' rule successfully applied to line 9.\n",
-      "'repeat' rule for line 8 failed.\n",
       "'imp intro' rule successfully applied to line 8.\n",
       "'repeat' rule for line 7 failed.\n",
       "'bot elim' rule for line 7 failed.\n",
       "'not elim' rule for line 7 failed.\n",
       "'imp elim' rule successfully applied to line 7.\n",
-      "'repeat' rule for line 6 failed.\n",
       "'imp intro' rule for line 6 failed.\n",
+      "'repeat' rule for line 6 failed.\n",
       "'bot elim' rule for line 6 failed.\n",
       "'not elim' rule for line 6 failed.\n",
       "'imp elim' rule successfully applied to line 6.\n",
@@ -220,13 +214,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "'repeat' rule for line 7 failed.\n",
       "'imp intro' rule successfully applied to line 7.\n",
-      "'repeat' rule for line 6 failed.\n",
       "'imp intro' rule successfully applied to line 6.\n",
       "'repeat' rule for line 5 failed.\n",
       "'bot elim' rule successfully applied to line 5.\n",
-      "'repeat' rule for line 4 failed.\n",
       "'bot intro' rule successfully applied to line 4.\n",
       "\n",
       "All formulas have been validated.\n",
@@ -324,11 +315,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "'repeat' rule for line 9 failed.\n",
       "'imp intro' rule successfully applied to line 9.\n",
-      "'repeat' rule for line 8 failed.\n",
       "'imp intro' rule successfully applied to line 8.\n",
-      "'repeat' rule for line 7 failed.\n",
       "'imp intro' rule successfully applied to line 7.\n",
       "'repeat' rule for line 6 failed.\n",
       "'bot elim' rule for line 6 failed.\n",
@@ -390,19 +378,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "'repeat' rule for line 16 failed.\n",
       "'iff intro' rule successfully applied to line 16.\n",
-      "'repeat' rule for line 15 failed.\n",
       "'imp intro' rule successfully applied to line 15.\n",
-      "'repeat' rule for line 14 failed.\n",
       "'imp intro' rule successfully applied to line 14.\n",
       "'repeat' rule for line 13 failed.\n",
       "'bot elim' rule for line 13 failed.\n",
       "'not elim' rule for line 13 failed.\n",
       "'imp elim' rule successfully applied to line 13.\n",
-      "'repeat' rule for line 12 failed.\n",
       "'and intro' rule successfully applied to line 12.\n",
-      "'repeat' rule for line 8 failed.\n",
       "'imp intro' rule successfully applied to line 8.\n",
       "'repeat' rule for line 7 failed.\n",
       "'bot elim' rule for line 7 failed.\n",
@@ -414,8 +397,8 @@
       "'imp elim' rule for line 6 failed.\n",
       "'iff elim' rule for line 6 failed.\n",
       "'and elim' rule successfully applied to line 6.\n",
-      "'repeat' rule for line 5 failed.\n",
       "'imp intro' rule for line 5 failed.\n",
+      "'repeat' rule for line 5 failed.\n",
       "'bot elim' rule for line 5 failed.\n",
       "'not elim' rule for line 5 failed.\n",
       "'imp elim' rule successfully applied to line 5.\n",
@@ -498,12 +481,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "'repeat' rule for line 6 failed.\n",
       "'imp intro' rule successfully applied to line 6.\n",
       "'repeat' rule for line 5 failed.\n",
       "'bot elim' rule for line 5 failed.\n",
       "'not elim' rule successfully applied to line 5.\n",
-      "'repeat' rule for line 4 failed.\n",
       "'bot intro' rule successfully applied to line 4.\n",
       "\n",
       "All formulas have been validated.\n",
@@ -549,11 +530,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "'repeat' rule for line 6 failed.\n",
       "'imp intro' rule successfully applied to line 6.\n",
-      "'repeat' rule for line 5 failed.\n",
       "'not intro' rule successfully applied to line 5.\n",
-      "'repeat' rule for line 4 failed.\n",
       "'bot intro' rule successfully applied to line 4.\n",
       "\n",
       "All formulas have been validated.\n",
@@ -611,17 +589,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "'repeat' rule for line 10 failed.\n",
       "'imp intro' rule successfully applied to line 10.\n",
-      "'repeat' rule for line 9 failed.\n",
       "'imp intro' rule successfully applied to line 9.\n",
       "'repeat' rule for line 8 failed.\n",
       "'bot elim' rule for line 8 failed.\n",
       "'not elim' rule successfully applied to line 8.\n",
-      "'repeat' rule for line 7 failed.\n",
       "'bot intro' rule successfully applied to line 7.\n",
-      "'repeat' rule for line 6 failed.\n",
       "'not intro' rule for line 6 failed.\n",
+      "'repeat' rule for line 6 failed.\n",
       "'bot elim' rule for line 6 failed.\n",
       "'not elim' rule for line 6 failed.\n",
       "'imp elim' rule successfully applied to line 6.\n",
