--- a/proofs_propositional/tautologies.ipynb
+++ b/proofs_propositional/tautologies.ipynb
@@ -86,7 +86,7 @@
     "6. A imp A .imp intro 2-5\n",
     "'''\n",
     "proof = parse_fitch(prf_str0)\n",
-    "proof.show_fitch_text(1)"
+    "proof.show_fitch_text()"
    ]
   },
   {
