--- a/proofs_propositional/validate_proof.ipynb
+++ b/proofs_propositional/validate_proof.ipynb
@@ -6,6 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# type: ignore\n",
     "try:\n",
     "  import sys\n",
     "  sys.path.append('../')\n",
