Adjust premises for insert/delete

--- a/proofs_propositional/edit_proof.ipynb
+++ b/proofs_propositional/edit_proof.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,277 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "│1. \t .hyp\n",
-      "├─\n",
-      "│2. \n",
-      "\n",
-      "{'1': [0, 0], '1-2': [0], '2': [0, 1]}\n"
-     ]
-    }
-   ],
-   "source": [
-    "proof = ProofNodeS() # blank proof\n",
-    "proof.show_fitch_text()\n",
-    "print()\n",
-    "pprint(proof.index_dict)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "type: subproof\n",
-      "line_num: 1-2\n",
-      "index: [0]\n",
-      "is_hyp: False\n",
-      "number of children: 2\n",
-      "\n",
-      "type: formula\n",
-      "line_num: 1\n",
-      "index: [0, 0]\n",
-      "is_hyp: True\n",
-      "line: top\t .hyp \n",
-      "validated: True\n",
-      "\n",
-      "type: blank.conc\n",
-      "line_num: 2\n",
-      "index: [0, 1]\n",
-      "is_hyp: False\n",
-      "line: \n",
-      "validated: True\n"
-     ]
-    }
-   ],
-   "source": [
-    "# ProofNode.build_str() example\n",
-    "\n",
-    "p_node12 = proof.get_p_node(\"1-2\")\n",
-    "print(p_node12.build_str())\n",
-    "print()\n",
-    "p_node1 = proof.get_p_node(1)\n",
-    "print(p_node1.build_str())\n",
-    "print()\n",
-    "p_node2 = proof.get_p_node(2)\n",
-    "print(p_node2.build_str())\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "A imp B\n",
-      "repeat 1\n"
-     ]
-    }
-   ],
-   "source": [
-    "fmla = Formula('A imp B')\n",
-    "ann = Ann('repeat 1')\n",
-    "print(fmla)\n",
-    "print(ann)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "│1. A imp B\t .hyp\n",
-      "├─\n",
-      "│2. \n"
-     ]
-    }
-   ],
-   "source": [
-    "proof.update_formula(1, fmla)\n",
-    "proof.show_fitch_text()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "│1. A imp B\t .hyp\n",
-      "├─\n",
-      "│2. A imp B\t\u001b[92m✓\u001b[39m repeat 1\n"
-     ]
-    }
-   ],
-   "source": [
-    "proof.update_formula(2, fmla)\n",
-    "proof.annotate('2', ann)\n",
-    "proof.show_fitch_text()\n",
-    "# proof.verified(2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "type: blank.conc\n",
-      "line: \n",
-      "formula: None\n",
-      "ann: None\n",
-      "is_hyp: False\n",
-      "\n",
-      "type: blank.conc\n",
-      "line_num: None\n",
-      "index: None\n",
-      "is_hyp: False\n",
-      "line: \n",
-      "validated: None\n"
-     ]
-    }
-   ],
-   "source": [
-    "label0 = NodeLabel(type='blank.conc')\n",
-    "print(label0.build_str())\n",
-    "print()\n",
-    "p_node = ProofNode(label0)\n",
-    "print(p_node.build_str())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'1-3': [0], '1': [0, 0], '2': [0, 1], '3': [0, 2]}\n",
-      "│1. A imp B\t .hyp\n",
-      "├─\n",
-      "│2. A imp B\t\u001b[92m✓\u001b[39m repeat 1\n",
-      "│3. \n",
-      "\n",
-      "type: formula\n",
-      "line_num: 2\n",
-      "index: [0, 1]\n",
-      "is_hyp: False\n",
-      "line: A imp B\t .repeat 1\n",
-      "validated: True\n"
-     ]
-    }
-   ],
-   "source": [
-    "# insert a blank line in the conclusion\n",
-    "proof.insert_node(2,go_above=False)\n",
-    "pprint(proof.index_dict, sort_dicts=False)\n",
-    "proof.show_fitch_text()\n",
-    "print()\n",
-    "p_node2 = proof.get_p_node(2)\n",
-    "print(p_node2.build_str())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'1-3': [0], '1': [0, 0], '2': [0, 1], '3': [0, 2]}\n",
-      "│1. A imp B\t .hyp\n",
-      "│2. \n",
-      "├─\n",
-      "│3. A imp B\t\u001b[92m✓\u001b[39m repeat 1\n",
-      "\n",
-      "type: formula\n",
-      "line_num: 1\n",
-      "index: [0, 0]\n",
-      "is_hyp: True\n",
-      "line: A imp B\t .hyp \n",
-      "validated: True\n"
-     ]
-    }
-   ],
-   "source": [
-    "# insert a blank line in the hypothesis\n",
-    "proof.insert_node(1, go_above=False)\n",
-    "pprint(proof.index_dict, sort_dicts=False)\n",
-    "proof.show_fitch_text()\n",
-    "print()\n",
-    "p_node2 = proof.get_p_node(1)\n",
-    "print(p_node2.build_str())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 56,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "is_earlier(): node_code=\u001b[33m3-6\u001b[39m not found in index_dict\n",
-      "\n",
-      "│1. \t .hyp\n",
-      "│2. \n",
-      "├─\n",
-      "││3. A\t .hyp\n",
-      "│├─\n",
-      "│││4. not A\t .hyp\n",
-      "││├─\n",
-      "│││5. bot\t\u001b[92m✓\u001b[39m bot intro 3,4\n",
-      "│6. A imp A\t\u001b[91mx\u001b[39m imp intro 3-6\n"
-     ]
-    }
-   ],
-   "source": [
-    "prf_str0 = '''\n",
-    "1. .hyp\n",
-    "\n",
-    "proves\n",
-    "  3. A .hyp\n",
-    "  proves\n",
-    "    4. not A .hyp\n",
-    "    proves\n",
-    "    5. bot .bot intro 3,4\n",
-    "7. A imp A .imp intro 3-6\n",
-    "'''\n",
-    "proof0 = ProofNodeS(parse_fitch(prf_str0))\n",
-    "proof0.show_fitch_text()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -301,41 +31,491 @@
      "output_type": "stream",
      "text": [
       "True\n",
-      "│1. \t .hyp\n",
-      "│2. \n",
-      "├─\n",
-      "││3. A\t .hyp\n",
-      "│├─\n",
-      "│││4. not A\t .hyp\n",
-      "││├─\n",
-      "│││5. bot\t\u001b[92m✓\u001b[39m bot intro 3,4\n",
-      "││6. \n",
-      "│7. A imp A\t\u001b[91mx\u001b[39m imp intro 3-6\n"
+      "\n",
+      "type: formula\n",
+      "line: top .\n",
+      "formula: top\n",
+      "ann: \n",
+      "is_hyp: False\n",
+      "\n",
+      "type: formula\n",
+      "line: top\n",
+      "formula: top\n",
+      "ann: \n",
+      "is_hyp: False\n",
+      "\n",
+      "True\n",
+      "\n",
+      "type: formula\n",
+      "line: top .hyp\n",
+      "formula: top\n",
+      "ann: hyp \n",
+      "is_hyp: True\n",
+      "\n",
+      "type: formula\n",
+      "line: .hyp\n",
+      "formula: top\n",
+      "ann: hyp \n",
+      "is_hyp: True\n"
      ]
     }
    ],
    "source": [
-    "print(proof0.insert_node(5, go_above=False, level_down=True))\n",
-    "proof0.show_fitch_text()"
+    "# NodeLabel.build_str() test\n",
+    "\n",
+    "label1 = NodeLabel(LabelType.FORMULA, 'top .')\n",
+    "label2 = NodeLabel(LabelType.FORMULA, 'top')\n",
+    "print(label1 == label2)\n",
+    "print()\n",
+    "print(label1.build_str())\n",
+    "print()\n",
+    "print(label2.build_str())\n",
+    "label3 = NodeLabel(LabelType.FORMULA, 'top .hyp')\n",
+    "label4 = NodeLabel(LabelType.FORMULA, '.hyp')\n",
+    "print()\n",
+    "print(label3 == label4)\n",
+    "print()\n",
+    "print(label3.build_str())\n",
+    "print()\n",
+    "print(label4.build_str())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1, [2, 3], 99]\n"
+      "│1. \t .hyp\n",
+      "├─\n",
+      "│2.  \n"
      ]
     }
    ],
    "source": [
-    "li = [1, [2,3]]\n",
-    "li.insert(2,99)\n",
-    "print(li)"
+    "# Create a blank proof.\n",
+    "proof = ProofNodeS() # blank proof\n",
+    "proof.show_fitch_text()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "│1. A\t .hyp\n",
+      "├─\n",
+      "│2.  \n"
+     ]
+    }
+   ],
+   "source": [
+    "# Set hypothesis.\n",
+    "proof.update_formula(1, Formula('A'))\n",
+    "proof.show_fitch_text()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "│1. A\t .hyp\n",
+      "├─\n",
+      "│2. B imp A\t\u001b[91mx\u001b[39m imp intro 1-2\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Set conclusion.\n",
+    "proof.update_formula(2, Formula('B imp A'))\n",
+    "proof.annotate(2, Ann('imp intro 1-2'))\n",
+    "proof.show_fitch_text()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "│1. A\t .hyp\n",
+      "├─\n",
+      "││2. \t .hyp\n",
+      "│├─\n",
+      "││3.  \n",
+      "│4. B imp A\t\u001b[91mx\u001b[39m imp intro 1-4\n"
+     ]
+    }
+   ],
+   "source": [
+    "# insert a subproof\n",
+    "blank_proof = ProofNodeS() # blank proof to be inserted\n",
+    "proof.insert_node(2, blank_proof)\n",
+    "proof.show_fitch_text()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "│1. A\t .hyp\n",
+      "├─\n",
+      "││2. B\t .hyp\n",
+      "│├─\n",
+      "││3. A\t\u001b[92m✓\u001b[39m repeat 1\n",
+      "│4. B imp A\t\u001b[92m✓\u001b[39m imp intro 2-3\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Update the inserted subproof.\n",
+    "proof.update_formula('2', Formula('B'))\n",
+    "proof.update_formula('3', Formula('A'))\n",
+    "proof.annotate('3', Ann('repeat 1'))\n",
+    "proof.annotate('4', Ann('imp intro 2-3'))\n",
+    "proof.show_fitch_text()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "│1. A\t .hyp\n",
+      "├─\n",
+      "││2. B\t .hyp\n",
+      "│├─\n",
+      "││3. A\t\u001b[92m✓\u001b[39m repeat 1\n",
+      "│4. B imp A\t\u001b[92m✓\u001b[39m imp intro 2-3\n"
+     ]
+    }
+   ],
+   "source": [
+    "proof.show_fitch_text()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "│1. A\t .hyp\n",
+      "├─\n",
+      "││2. B\t .hyp\n",
+      "│├─\n",
+      "││3. \n",
+      "││4. A\t\u001b[92m✓\u001b[39m repeat 1\n",
+      "│5. B imp A\t\u001b[92m✓\u001b[39m imp intro 2-4\n"
+     ]
+    }
+   ],
+   "source": [
+    "import copy\n",
+    "prf = copy.deepcopy(proof)\n",
+    "prf.insert_node(3)\n",
+    "prf.show_fitch_text()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "│1. A\t .hyp\n",
+      "├─\n",
+      "││2. B\t .hyp\n",
+      "│├─\n",
+      "││3. A\t\u001b[92m✓\u001b[39m repeat 1\n",
+      "│4. B imp A\t\u001b[92m✓\u001b[39m imp intro 2-3\n"
+     ]
+    }
+   ],
+   "source": [
+    "prf.delete_node(3)\n",
+    "prf.show_fitch_text()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ProofNode.build_str() test\n",
+    "\n",
+    "proof.show_fitch_text()\n",
+    "print()\n",
+    "\n",
+    "if proof.index_dict is not None:\n",
+    "  for key in proof.index_dict:\n",
+    "    p_node = proof.get_p_node(key)\n",
+    "    print(p_node.build_str())\n",
+    "    print()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# test delete_node() method\n",
+    "\n",
+    "import copy\n",
+    "proof1 = copy.deepcopy(proof)\n",
+    "proof1.delete_node('1')\n",
+    "proof1.show_fitch_text()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "proof2 = copy.deepcopy(proof)\n",
+    "proof2.delete_node('2')\n",
+    "proof2.show_fitch_text()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "proof3 = copy.deepcopy(proof)\n",
+    "proof3.delete_node('3')\n",
+    "proof3.show_fitch_text()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "proof4 = copy.deepcopy(proof)\n",
+    "proof4.delete_node('4')\n",
+    "proof4.show_fitch_text()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "proof23 = copy.deepcopy(proof)\n",
+    "proof23.delete_node('2-3')\n",
+    "proof23.show_fitch_text()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# test update_formula() method\n",
+    "fmla = Formula('A imp B')\n",
+    "proof1 = copy.deepcopy(proof)\n",
+    "proof1.update_formula(1, fmla)\n",
+    "proof1.show_fitch_text()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "proof2 = copy.deepcopy(proof)\n",
+    "proof2.update_formula(2, fmla)\n",
+    "proof2.show_fitch_text()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "proof2.update_formula(3, fmla)\n",
+    "proof2.annotate('3', Ann('repeat 2'))\n",
+    "proof2.show_fitch_text()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "proof2.update_formula(4, Formula('(A imp B) imp A imp B'))\n",
+    "proof2.show_fitch_text()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "proof.show_fitch_text()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# insert a blank line in the conclusion\n",
+    "proof.insert_node(3)\n",
+    "proof.show_fitch_text()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "proof.annotate(5, Ann('imp intro 2-4'))\n",
+    "# or, we can use the following instead of the above.\n",
+    "# proof.search_proof()\n",
+    "proof.show_fitch_text()\n",
+    "# p_node2 = proof.get_p_node(2)\n",
+    "# print(p_node2.build_str())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# insert a blank line in the hypothesis\n",
+    "proof.insert_node(1)\n",
+    "proof.show_fitch_text()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# insert a comment in the hypothesis\n",
+    "label = NodeLabel(type=LabelType.COMMENT_HYP, \n",
+    "                  line='# silly comment')\n",
+    "proof.insert_node(1, ProofNode(label))\n",
+    "proof.show_fitch_text()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Replace the blank line (Line 2) with a comment.\n",
+    "label = NodeLabel(type=LabelType.COMMENT_HYP, \n",
+    "                  line='# blank line replaced')\n",
+    "new_node = ProofNode(label)\n",
+    "proof.replace_node(2, new_node)\n",
+    "proof.show_fitch_text()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Replace the blank line (Line 5) in conclusion\n",
+    "#  with a comment.\n",
+    "label = NodeLabel(type=LabelType.COMMENT_CONC, \n",
+    "                  line='# comment in conclusion')\n",
+    "p_node = ProofNode(label)\n",
+    "proof.replace_node(5, p_node)                  \n",
+    "proof.show_fitch_text()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Let's work on the following proof.\n",
+    "# (B and C imp A) imp (B imp A) or (C imp A)\n",
+    "\n",
+    "prf_str = \"\"\"\n",
+    "1. B and C imp A .hyp\n",
+    "proves\n",
+    "2. C or not C\n",
+    "  3. C .hyp\n",
+    "  proves\n",
+    "    4. B .hyp\n",
+    "    proves\n",
+    "    5. B and C \n",
+    "    6. A \n",
+    "  7. B imp A \n",
+    "  8. (B imp A) or (C imp A) \n",
+    "  9. not C .hyp\n",
+    "  proves\n",
+    "    10. C .hyp\n",
+    "    proves\n",
+    "    11. bot \n",
+    "    12. A \n",
+    "  13. C imp A \n",
+    "  14. (B imp A) or (C imp A) \n",
+    "15. (B imp A) or (C imp A) \n",
+    "\"\"\"\n",
+    "proof = ProofNodeS(parse_fitch(prf_str))\n",
+    "proof.search_proof(1)\n",
+    "proof.show_fitch_text()"
    ]
   }
  ],
