--- a/proofs_propositional/validate_proof.ipynb
+++ b/proofs_propositional/validate_proof.ipynb
@@ -73,7 +73,7 @@
    "source": [
     "# Construct a NodeLabel object from a string.\n",
     "line = \"A imp B .hyp\"\n",
-    "label = NodeLabel('formula', line)\n",
+    "label = NodeLabel(LabelType.FORMULA, line)\n",
     "print(label.build_str())\n",
     "print()\n",
     "print(label)"
@@ -100,16 +100,16 @@
    "source": [
     "# Construct a ProofNode manually. (not by using the parser)\n",
     "line1 = \"A imp B .hyp\"\n",
-    "label1 = NodeLabel('formula', line1)\n",
+    "label1 = NodeLabel(LabelType.FORMULA, line1)\n",
     "node1 = ProofNode(label1)\n",
     "line2 = \"A .hyp\"\n",
-    "label2 = NodeLabel('formula', line2)\n",
+    "label2 = NodeLabel(LabelType.FORMULA, line2)\n",
     "node2 = ProofNode(label2)\n",
     "line3 = \"B .imp elim 1,2\"\n",
-    "label3 = NodeLabel('formula', line3)\n",
+    "label3 = NodeLabel(LabelType.FORMULA, line3)\n",
     "node3 = ProofNode(label3)\n",
     "line4 = \"A .repeat 2\"\n",
-    "label4 = NodeLabel('formula', line4)\n",
+    "label4 = NodeLabel(LabelType.FORMULA, line4)\n",
     "node4 = ProofNode(label4)\n",
     "label0 = NodeLabel()\n",
     "node0 = ProofNode(label0, [node1, node2, node3, node4])\n",
@@ -141,22 +141,22 @@
    "source": [
     "# Another example, similar to the one above.\n",
     "line1 = \"A imp B .hyp\"\n",
-    "label1 = NodeLabel('formula', line1)\n",
+    "label1 = NodeLabel(LabelType.FORMULA, line1)\n",
     "node1 = ProofNode(label1)\n",
     "line2 = \"B imp C .hyp\"\n",
-    "label2 = NodeLabel('formula', line2)\n",
+    "label2 = NodeLabel(LabelType.FORMULA, line2)\n",
     "node2 = ProofNode(label2)\n",
     "line3 = \"A .hyp\"\n",
-    "label3 = NodeLabel('formula', line3)\n",
+    "label3 = NodeLabel(LabelType.FORMULA, line3)\n",
     "node3 = ProofNode(label3)\n",
     "line4 = \"B .imp elim 1,3\"\n",
-    "label4 = NodeLabel('formula', line4)\n",
+    "label4 = NodeLabel(LabelType.FORMULA, line4)\n",
     "node4 = ProofNode(label4)\n",
     "line5 = \"C .imp elim 2,4\"\n",
-    "label5 = NodeLabel('formula', line5)\n",
+    "label5 = NodeLabel(LabelType.FORMULA, line5)\n",
     "node5 = ProofNode(label5)\n",
     "line6 = \"A imp C .imp intro 3-5\"\n",
-    "label6 = NodeLabel('formula', line6)\n",
+    "label6 = NodeLabel(LabelType.FORMULA, line6)\n",
     "node6 = ProofNode(label6)\n",
     "label_root = NodeLabel()\n",
     "label_sub = NodeLabel()\n",
@@ -668,14 +668,14 @@
     "for i in index_dict:\n",
     "  for j in index_dict:\n",
     "    label_j = proof.get_p_node(j).label\n",
-    "    if label_j.type == 'formula' and not label_j.is_hyp: # conclusion\n",
-    "      if proof.is_earlier(i, j):\n",
+    "    if label_j.type == LabelType.FORMULA and not label_j.is_hyp: # conclusion\n",
+    "      if proof.is_earlier(i, j, True):\n",
     "        print(f\"{i} <= {j}\") "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -701,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -740,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -749,7 +749,7 @@
        "False"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
